--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <h5 class="fw-bold" style="color: #043b5c;">SISTEM INFOMASI ASET DESA</h5>
               <p class="card-text">Aplikasi untuk pengelolaan aset desa</p>
               <div class="d-flex justify-content-between align-items-center">
-                <a href="https://mlbb-heroes.vercel.app/" class="btn btn-blue text-light py-2 px-4">Kunjungi</a>
+                <a href="https://mlj.vercel.app/" class="btn btn-blue text-light py-2 px-4">Kunjungi</a>
                 <!-- <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
